pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorCannotIterateOverTyped.pkl
class Person
foo {
  for (_ in new Person {}) { 42 }
}
